--- a/01_Learn_Vue3/06-计算属性/02-三个案例的实现-methods.html
+++ b/01_Learn_Vue3/06-计算属性/02-三个案例的实现-methods.html
@@ -10,9 +10,9 @@
   <div id="app"></div>
 
   <template id="my-app">
-    <h2>{{firstName + " " + lastName}}</h2>
-    <h2>{{score >= 60 ? '及格' : '不及格'}}</h2>
-    <h2>{{message.split(" ").reverse().join("")}}</h2>
+    <h2>{{getFullName()}}</h2>
+    <h2>{{getResult()}}</h2>
+    <h2>{{getReverseMessage()}}</h2>
   </template>
 
   <script src="../../js/vue.js"></script>
@@ -27,6 +27,17 @@
           message: "Hello World"
         }
       },
+      methods: {
+        getFullName() {
+          return this.firstName + " " + this.lastName;
+        },
+        getResult() {
+          return this.score >= 60 ? "及格" : "不及格";
+        },
+        getReverseMessage() {
+          return this.message.split(" ").reverse().join(" ");
+        }
+      }
     }
 
     Vue.createApp(App).mount('#app');
