--- a/01_Learn_Vue3/06-计算属性/04-methods-computed区别.html
+++ b/01_Learn_Vue3/06-计算属性/04-methods-computed区别.html
@@ -10,9 +10,9 @@
   <div id="app"></div>
 
   <template id="my-app">
+    <button @click="changeFirstName">修改firstName</button>
     <h2>{{fullName}}</h2>
-    <h2>{{result}}</h2>
-    <h2>{{reverseMessage}}</h2>
+    <h2>{{getFullName()}}</h2>
   </template>
 
   <script src="../../js/vue.js"></script>
@@ -26,13 +26,19 @@
         }
       },
       computed: {
-        //定义了一个计算属性叫fullname
+        //计算属性是有缓存的，当我们多次使用计算属性是，计算属性中的运算只会执行一次
+        //计算属性会随着依赖的数据（firstName）的改变，进行重新计算
         fullName() {
           return this.firstName + " " + this.lastName;
         },
       },
       methods: {
-        
+        getFullName(){
+          return this.firstName + " " + this.lastName;
+        },
+        changeFirstName(){
+          this.firstName = "Coder"
+        }
       }
     }
 
